<resources>
    <string name="app_name">Notatnik detektorysty</string>
    <string name="title_map">Map</string>
    <string name="title_Home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_pictures">Pictures</string>
    <string name="title_favorite_list">Favorite List</string>
    <string name="title_settings">Settings</string>
    <string name="add_new_poi">Dodać nowe znalezisko?</string>
    <string name="set_name">wpisz nazwę</string>
    <string name="add">dodaj</string>
    <string name="cancel">anuluj</string>
    <string name="set_findings_name">Wpisz nazwę znaleziska</string>
    <string name="set_findings_description">Wpisz opis znaleziska</string>
    <string name="dawid_cieszewski">Dawid Cieszewski</string>
    <string name="author">Autor</string>
    <string name="more">more</string>
    <string name="details">szczegoly</string>
    <string name="search">wyszukaj</string>
</resources>
