<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/mapFragment2"
            android:icon="@drawable/map_icon"
            android:title="@string/title_map"/>

    <item
            android:id="@+id/poiListFragment2"
            android:icon="@drawable/list_icon"
            android:title="@string/title_favorite_list"/>

    <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_baseline_more_vert_24"
            android:title="@string/more"/>

<!--    <item-->
<!--            android:id="@+id/navigation_pictures"-->
<!--            android:icon="@drawable/picture_icon"-->
<!--            android:title="@string/title_pictures"/>-->

<!--    <item-->
<!--        android:id="@+id/navigation_settings"-->
<!--        android:icon="@drawable/setting_icon"-->
<!--        android:title="@string/title_settings"/>-->
</menu>
