<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="200dp">


    <TextView
            android:id="@+id/dialog_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_poi"
            android:textColor="#000000"
            android:background="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/dialog_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/dialog_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_name"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_info"
            android:layout_marginBottom="13dp"
            app:layout_constraintBottom_toTopOf="@+id/dialog_set_name" />

    <EditText
            android:id="@+id/dialog_set_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_name"
            android:layout_marginBottom="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/dialog_accept"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColorHighlight="@color/colorDarkGrey"
            app:layout_constraintHorizontal_bias="0.0" />

    <Button
            android:id="@+id/dialog_accept"
            android:layout_width="64dp"
            android:layout_height="38dp"
            android:background="@drawable/rounded_button"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.901"
            app:layout_constraintEnd_toEndOf="@+id/dialog_set_name"
            app:layout_constraintStart_toEndOf="@+id/dialog_cancel"
            app:layout_constraintHorizontal_bias="0.765" />

    <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="64dp"
            android:layout_height="38dp"
            android:background="@drawable/rounded_button"
            android:text="@string/cancel"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/dialog_set_name"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_accept"
            app:layout_constraintEnd_toEndOf="@+id/dialog_set_name"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/dialog_set_name"
            app:layout_constraintHorizontal_bias="0.161" />
</androidx.constraintlayout.widget.ConstraintLayout>